# genetic_engine

./: .gitignore  README.md  pyproject.toml  test_improvements.py
genetic_opt/: __init__.py
genetic_opt/sga/: __init__.py  __main__.py  optimizer.py
genetic_opt/sga/examples/: __init__.py  polynomial_fit.py
genetic_opt/sga/utils/: __init__.py  export.py  monitor.py  visualization.py
scripts/: __init__.py  create_demo_gif.py  run_examples.py  run_polynomial_example.py
sga/: __init__.py  __main__.py  optimizer.py
sga/examples/: __init__.py  polynomial_fit.py
sga/utils/: __init__.py  export.py  monitor.py  visualization.py
tests/: test_optimizer.py
