[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genetic_opt"
version = "0.1.0"
description = "A genetic optimization project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "psutil>=5.9.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]
windows = [
    "windows-curses>=2.3.0",  # Only needed on Windows, curses is built-in on Unix/macOS
]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black" 
